--- a/htdocs/dam.html
+++ b/htdocs/dam.html
@@ -43,7 +43,7 @@
 			<h4> Beaver Times News </h4>
 			<h5> Posted at XXX-XXX </h5>
 			
-			<img class="header-image" src="../images/beaver-dam.JPG" title="Image taken from the Building Site.">
+			<img class="header-image" src="../images/beaver-dam.jpg" title="Image taken from the Building Site.">
 			
 			<p> During his speech, the leader of Y city, XXX, spoke of his plans on building a dam between the borders of Y city and J city. The dam would be n ft high and would span across the whole boundary. It would be built using the finest wood and a constant patrol in the area by the beaver military would be enforced. 
 			</p>
