--- a/htdocs/elections.html
+++ b/htdocs/elections.html
@@ -83,7 +83,7 @@
 		<aside class="side-news">
 			<h3> More News </h3>
 				<ul>
-					<li class="list-side"><a href="Covid.html"> “It’s spreading…fast. We must act quick to contain it”<br> Experts talk about an unknown disease. </a></li>
+					<li class="list-side"><a href="covid.html"> “It’s spreading…fast. We must act quick to contain it”<br> Experts talk about an unknown disease. </a></li>
 					<li class="list-side"><a href="dam.html"> “Let us Build a Dam!” – Leader of Y city </a></li>
 				</ul>
 		</aside>
